# capp-rs

./: .amc.toml  .editorconfig  .gitignore  .tmuxp.yaml  .zelp.ron  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  audit.toml  notes.org  review.md  rustfmt.toml  tarpaulin-report.html
.cargo/: audit.toml
.github/workflows/: additional-checks.yml  ci.yml  ci.yml.disabled  coverage.yml  platform-coverage.yml  publish.yml  test.yml
.sqlx/: query-1e339e959f8d2cdac13b3e2b452d2f718c0fd6cf6202d5c9139fb1afda123d29.json  query-4f244b199b76c28e71bc9fcefe076be8dd99822c3688c90548db5331703599a7.json  query-926755a98d0ad62a460df7d1416af9951dad4dc06727d5367a727dfe303b5abd.json  query-9797aa5f3d4d9be57c64856375d16990531cb1bfd55292b6f0fcb99a5efc2147.json  query-e3e6dc7484e8e5602020b2c4f2445c3d0d149dccfae0e40f60dc907d968d1369.json
app-context/: Cargo.toml
capp/: Cargo.toml
capp-cache/: Cargo.toml
capp-cache/src/: cache.rs  error.rs  file.rs  http_cache.rs  lib.rs  mongodb.rs
capp-cache/tests/: cache_mongodb_tests.rs  file_cache_tests.rs  mongodb_tests.rs
capp-config/: Cargo.toml
capp-config/src/: config.rs  healthcheck.rs  http.rs  lib.rs  proxy.rs  router.rs
capp-config/tests/: common.rs  healthcheck_tests.rs
capp-config/tests/common/: http_server.rs  support.rs
capp-queue/: Cargo.toml
capp-queue/benches/: fjall_bench.rs  inmemory_bench.rs  mongo_bench.rs  postgres_bench.rs  redis_bench.rs
capp-queue/benches/common/: data.rs
capp-queue/src/: backend.rs  dispatch.rs  lib.rs  queue.rs  serializers.rs  task.rs
capp-queue/src/backend/: fjall.rs  fjall_round_robin.rs  memory.rs  mongodb.rs  postgres.rs  redis.rs  redis_rr.rs
capp-queue/tests/: mongodb_tests.rs  postgres_tests.rs  queue_mongodb_tests.rs  queue_postgres_tests.rs  queue_redis_rr_tests.rs  queue_redis_tests.rs  redis_rr_tests.rs  redis_tests.rs  round_robin.rs
capp-router/: Cargo.toml
capp-router/src/: lib.rs
capp-testkit/: Cargo.toml
capp-testkit/src/: lib.rs  support.rs
capp-urls/: Cargo.toml
capp-urls/src/: lib.rs  middleware.rs  urls.rs
capp/src/: config.rs  healthcheck.rs  lib.rs  manager.rs  observability.rs  prelude.rs  queue.rs  stats_http.rs
capp/src/manager/: computation.rs  handler.rs  mailbox.rs  stats.rs  worker.rs  workers_manager.rs
capp/src/queue/: backend.rs
examples/: README.md  basic.rs  complex.rs  complex.rs.not_working  executor.rs  executor_basic.rs  hackernews.rs.not_working  hn_config.yml  httpbin_tower.rs  local_blog_crawl.rs  mailbox.rs  mailbox_metrics.rs  mailbox_stats_http.rs  otel-local.yaml  otlp_heartbeat.rs  urls.rs
examples/hackernews/: hn_config.toml  hn_config.yml  main.rs  parse.rs  store.rs  task.rs
migrations/: 20241220192509_init_queue_tables.down.sql  20241220192509_init_queue_tables.up.sql
skills/: build_crawler.md
specs/: ctx.md  mailbox.md  migration-0.6.md  monitoring.md  overview.md  refactoring.md  roadmap.md
src/: config.rs  executor.rs  healthcheck.rs  http.rs  lib.rs  main.rs  manager.rs  new.rs  prelude.rs  proxy.rs  queue.rs  router.rs  service.rs  storage.rs  task.rs  task_deport.rs  task_executor.rs  test_utils.rs
src/executor/: executor.rs  mod.rs  processor.rs  storage.rs  task.rs  utils.rs  worker.rs
src/manager/: computation.rs  handler.rs  utils.rs  worker.rs  workers_manager.rs
src/queue/: backend.rs
src/queue/backend/: memory.rs  redis.rs  redis_rr.rs
src/storage/: backends.rs
src/storage/backends/: memory.rs  redis.rs  redis_rr.rs
src/task_deport/: task.rs
src/task_deport/backends/: memory.rs  redis.rs  redis_rr.rs
src/task_executor/: computation.rs  runner.rs  stats.rs  utils.rs  worker.rs
task_deport/: Cargo.toml
task_deport/src/: backends.rs  lib.rs  memory.rs  redis.rs  redis_rr.rs  task.rs
task_deport/src/backends/: memory.rs  redis.rs  redis_rr.rs
task_deport/tests/: redis_rr_tests.rs  redis_tests.rs
tests/: executor_tests.rs  healthcheck_tests.rs  http_tests.rs  manager_tests.rs  redis_rr_tests.rs  redis_tests.rs  redis_tests.rs.not_working  simple_config.toml  simple_config.yml  simple_uas.txt
tests/common/: http_server.rs  support.rs
