[workspace]
resolver = "2"
members = [
    "capp", 
    "capp-queue",
    "capp-config",
    "capp-router",
    "capp-cache",
]

[workspace.package]
version = "0.4.6"
edition = "2021"
license = "MIT"
rust-version = "1.80"
authors = ["oiwn"]
repository = "https://github.com/oiwn/capp-rs"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["gzip", "rustls-tls", "json"] }
tokio = { version = "1.42", features = ["full"] }

# Utils
async-trait = { version = "0.1" }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = { version = "0.8" }
