[workspace]
resolver = "2"
members = [
    "capp",
    "capp-queue",
    "capp-config",
    "capp-router",
    "capp-cache",
    "capp-urls"
]

[workspace.package]
version = "0.5.2"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["oiwn"]
keywords = ["web-crawler", "async", "executor"]
categories = ["asynchronous", "web-programming", "concurrency"]
description = "Common things i use to build Rust CLI tools for web crawlers."
repository = "https://github.com/oiwn/capp-rs"
homepage = "https://github.com/oiwn/capp-rs"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls", "json"] }
tokio = { version = "1.47", features = ["full"] }

# Utils
async-trait = { version = "0.1" }
derive_builder = { version = "0.20" }
uuid = { version = "1.17", features = ["v4", "v7", "serde"] }
rand = { version = "0.9" }
regex = { version = "1.11" }
url = { version = "2.5" }
toml = "0.9.8"
fjall = "2.11.2"
