[package]
name = "capp-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.13", features = ["chrono-0_4"] }
mongodb = { version = "3", features = ["rustls-tls"] }

[dev-dependencies]
dotenvy = "0.15"
