[package]
name = "capp-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

  
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

backoff = { version = "0.4", optional = true, features = ["tokio"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[features]
http = ["dep:reqwest", "dep:backoff"]
