[package]
name = "capp-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

backoff = { version = "0.4", optional = true, features = ["tokio"] }

[dev-dependencies]
anyhow = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["server", "http1"] }
pin-project-lite = "0.2"
tempfile = "3"

[features]
http = ["dep:reqwest", "dep:backoff"]
