[package]
name = "capp-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

# rustis = { version = "0.13", features = ["tokio-runtime"], optional = true }
rustis = { version = "0.16", features = ["tokio-runtime"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true  }
bson = { version = "2.13", features = ["chrono-0_4"], optional = true }
# mongodb = { version = "3", optional = true }
mongodb = { version = "3", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "json", "uuid", "chrono" ], optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.43", features = ["full", "test-util"] }
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }
fake = { version = "3.0", features = ["derive", "url"] }
mongodb = { version = "3" }

[features]
redis = ["dep:rustis"]
mongodb = ["dep:futures", "dep:futures-util", "dep:mongodb", "dep:chrono", "dep:bson"]
postgres = ["dep:sqlx"]


# [[bench]]
# name = "inmemory_bench"
# harness = false

# [[bench]]
# name = "redis_bench"
# harness = false

# [[bench]]
# name = "mongo_bench"
# harness = false

# [[bench]]
# name = "postgres_bench"
# harness = false
