[package]
name = "capp-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
fjall = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true  }
bson = { version = "2.13", features = ["chrono-0_4"], optional = true }
mongodb = { version = "3", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit", "buffer", "retry"] }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.43", features = ["full", "test-util"] }
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }
fake = { version = "3.0", features = ["derive", "url"] }
mongodb = { version = "3" }
tempfile = "3"

[features]
default = ["fjall"]
fjall = ["dep:fjall"]
mongodb = ["dep:futures", "dep:futures-util", "dep:mongodb", "dep:chrono", "dep:bson"]

[[bench]]
name = "fjall_bench"
harness = false

[[bench]]
name = "inmemory_bench"
harness = false

[[bench]]
name = "mongo_bench"
harness = false
required-features = ["mongodb"]
