[package]
name = "capp-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
fjall = { workspace = true, optional = true }
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit", "buffer", "retry"] }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.51", features = ["full", "test-util"] }
serial_test = "3"
criterion = { version = "0.7", features = ["html_reports"] }
fake = { version = "5.1", features = ["derive", "url"] }
tempfile = "3"

[features]
default = ["fjall"]
fjall = ["dep:fjall"]

[[bench]]
name = "fjall_bench"
harness = false

[[bench]]
name = "inmemory_bench"
harness = false
