[package]
name = "capp-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal test support for local crawler fixtures."
publish = false

[dependencies]
anyhow = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["server", "http1"] }
pin-project-lite = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
