[package]
name = "capp-urls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
url = { workspace = true }
regex = { workspace = true }
