[package]
name = "capp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "tmp/*",
    # "benches/*",
    "html/*",
    ".github/*",
    ".gitignore",
    ".tmuxp.yaml",
    "notes.org"
]

[lib]
name = "capp"
path = "src/lib.rs"
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
derive_builder.workspace = true

# Workspaces
capp-config = { path = "../capp-config" }
capp-queue = { path = "../capp-queue" }
capp-router = { path = "../capp-router", optional = true }
capp-cache = { path = "../capp-cache", optional = true }
capp-urls = { path = "../capp-urls", optional = true }

# Deps
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls", "json"], optional = true }
rand = { workspace = true }
rustis = { version = "0.16", features = ["tokio-runtime"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true  }
bson = { version = "2.15", features = ["chrono-0_4"], optional = true }
mongodb = { version = "3", optional = true }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "json", "uuid", "chrono" ], optional = true }
toml = { workspace = true }

[dev-dependencies]
capp = { path = ".", features = ["http", "router", "healthcheck", "mongodb", "redis", "cache", "urls"] }
hyper = { version = "1.6", features = ["server", "http1"] }
http-body-util = "0.1"
bytes = "1.6"
pin-project-lite = "0.2"
dotenvy = "0.15"
scraper = "0.23"
rand = "0.9"
md5 = "0.7"
url = "2.5"
base64 = "0.22"

[features]
http = ["dep:reqwest", "capp-config/http"]
router = ["capp-router"]
healthcheck = ["dep:reqwest"]
cache = ["capp-cache"]
urls = ["capp-urls"]
redis = ["capp-queue/redis", "dep:rustis"]
mongodb = ["capp-queue/mongodb", "dep:mongodb", "dep:chrono", "dep:bson"]
postgres = ["capp-queue/postgres", "dep:sqlx"]

[[example]]
name = "basic"
path = "../examples/basic.rs"

# [[example]]
# name = "hackernews"
# path = "../examples/hackernews/main.rs"

