[package]
name = "capp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "tmp/*",
    # "benches/*",
    "html/*",
    ".github/*",
    ".gitignore",
    ".tmuxp.yaml",
    "notes.org"
]

[lib]
name = "capp"
path = "src/lib.rs"
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true

# Workspaces
capp-config = { workspace = true }
capp-queue = { workspace = true }
capp-router = { workspace = true, optional = true }
capp-cache = { workspace = true, optional = true }
capp-urls = { workspace = true, optional = true }

# Deps
reqwest = { version = "0.13", default-features = false, features = ["gzip", "rustls", "json"], optional = true }
rand = { workspace = true }
toml = { workspace = true }
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit", "buffer", "retry"] }
opentelemetry = { version = "0.31.0", features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.1", features = ["metrics", "http-proto"], optional = true }
hyper = { version = "1.9", features = ["server", "http1"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.11", optional = true }
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
capp = { path = ".", features = ["http", "router", "healthcheck", "cache", "urls"] }
capp-testkit = { path = "../capp-testkit" }
pin-project-lite = "0.2"
dotenvy = "0.15"
scraper = "0.26"
rand = "0.10"
md5 = "0.8"
url = "2.5"
base64 = "0.22"
fjall.workspace = true

[features]
http = ["dep:reqwest", "capp-config/http"]
router = ["capp-router"]
healthcheck = ["dep:reqwest"]
cache = ["capp-cache"]
urls = ["capp-urls"]
stats-http = ["dep:hyper", "dep:http-body-util", "dep:bytes"]
observability = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "mailbox"
path = "../examples/mailbox.rs"

[[example]]
name = "mailbox_metrics"
path = "../examples/mailbox_metrics.rs"
required-features = ["observability"]

[[example]]
name = "otlp_heartbeat"
path = "../examples/otlp_heartbeat.rs"
required-features = ["observability"]

[[example]]
name = "mailbox_stats_http"
path = "../examples/mailbox_stats_http.rs"
required-features = ["stats-http"]

[[example]]
name = "httpbin_tower"
path = "../examples/httpbin_tower.rs"
required-features = ["http"]

[[example]]
name = "local_blog_crawl"
path = "../examples/local_blog_crawl.rs"
required-features = ["http"]

[[example]]
name = "hackernews"
path = "../examples/hackernews/main.rs"
required-features = ["http"]
