[package]
name = "task_deport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.2", features = ["v4", "serde"] }
async-trait = { version = "0.1.68" }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = { version = "1.0.96" }
thiserror = { version = "1.0.40" }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
