[package]
name = "task_deport"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Organize simple task queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "serde"] }
async-trait = { version = "0.1.73" }
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.3", features = ["serde"] }
serde_json = { version = "1.0.106" }
thiserror = { version = "1.0.48" }
rustis = { version = "0.12.0", features = ["tokio-runtime"] }


[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
